# janestreet-puzzles

./: README.md  pyproject.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
2024-11/: Solution.ipynb
